--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                <div class="cell small-4"></div>
                <div class="cell small-4">
                    <div class="grid-x grid-margin-x menu">
-                       <div class="cell small-4">WORKSS</div>                       
+                       <div class="cell small-4">Works</div>                       
                        <div class="cell small-4">About</div>                       
                        <div class="cell small-4">Contact</div>
                       
