--- a/galleries/fantasy_page_1/index.html
+++ b/galleries/fantasy_page_1/index.html
@@ -47,8 +47,7 @@
                       </div>
                       <div class="cell small-12 medium-3 grid-margin-x grid-padding-x grid-margin-y gallery-1-right">
                           <h4>home</h4>
-                          lithographic prints on paper
-                          
+                          Lithographic prints on paper depicting memories and ideas of home, in  which 'home' is an internal place. Coming from a difficult home situation, the place that is 'home' is 'dirty' in the eyes of others. Acceptance of this fact and a need for escapism weave to make this dilapidated fantasy landscape.
                       </div>
                   </div>
               </div>
