--- a/contact/index.html
+++ b/contact/index.html
@@ -106,7 +106,7 @@
                <div class="cell small-1"></div>
                <div class="cell small-12 medium-3 content-right">
                    <div class="cell small-12">
-                      <h4>more from holly</h4>
+                      <h4>more from me</h4>
                       </div>
                       <div class="cell small-12 link-1">
                        <img src="/images/pulled/ig.png" alt=""> 
