--- a/contact/index.html
+++ b/contact/index.html
@@ -112,6 +112,7 @@
                        <img src="/images/pulled/ig.png" alt=""> 
                            <a href="https://www.instagram.com/thelooserchange/">@thelooserchange</a>
                       </div>
+                      <div class="cell small-12"></div>
                       <div class="cell small-12 link-2">
                        <img src="/images/pulled/tumblr.png" alt="">
                            <a href="https://www.tumblr.com/blog/thelooserchange"> @thelooserchange</a>
